--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   another_flushbar: ^1.12.29  # message carrier
   provider: ^6.0.5 #state management
   rating_dialog: ^2.0.4 #rating dialog box
+  google_maps_flutter: ^2.2.3 #google map
   
 
 
