--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,11 @@ dependencies:
   provider: ^6.0.5 #state management
   rating_dialog: ^2.0.4 #rating dialog box
   google_maps_flutter: ^2.2.3 #google map
-  
+
+  #database
+  firebase_core: ^2.6.1 # core connection to firebase 
+  cloud_firestore: ^4.4.2 # cloud storage for data
+  firebase_auth: ^4.2.8 # authentication
 
 
   # The following adds the Cupertino Icons font to your application.
