--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ems_project">
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+        <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="ems_project"
         android:name="${applicationName}"
@@ -27,6 +32,8 @@
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
+             <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyBVMT5m7mO6dv8uwRrpzBlUS_JEFDHkxuw"/>
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
