--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_polyline_points: ^1.0.0 # draw lines on map
   location: ^4.4.0 # real time location
   url_launcher: ^6.1.10 #
+  geolocator: ^9.0.2 # get the location of user
 
   #database
   firebase_core: ^2.6.1 # core connection to firebase 
