--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   
   validators: ^3.0.0  # regex validation checker
+  min_id: ^1.1.0  #unique id generator for requests caseID
   fluttertoast: ^8.1.1  # message carrier
   another_flushbar: ^1.12.29  # message carrier
   provider: ^6.0.5 #state management
